@@ -1,5 +1,6 @@
 Revision history for Ocsinventory::Agent
 
+       * New version of Gentoo.pm 
        * New Backend/Virtualization/Parallels.pm module for Parallels virtual machines inventory
        * Plugin Processes moved as module
        * Fix bug #911491 for BSD
